--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "appwrite": "^14.0.1",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
+    "vue-router": "^4.4.5",
     "vuetify": "^3.6.11"
   },
   "devDependencies": {
